manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mtc-demo
  labels:
    app.kubernetes.io/part-of: mtc-devops
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
